testcrontab.log
/usr/lib/python3/dist-packages/urllib3/connectionpool.py:794: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.org/en/latest/security.html
  InsecureRequestWarning)
/usr/local/lib/python3.5/dist-packages/pandas/core/indexing.py:189: SettingWithCopyWarning: 
A value is trying to be set on a copy of a slice from a DataFrame

See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy
  self._setitem_with_indexer(indexer, value)
....requesting url:https://api.bitfinex.com/v2/candles/trade:30m:tBTCUSD/hist?end=1537081233000.0&limit=1&sort=-1&start=1537079400000
1
updating date at time2018-09-16 15:00:39.711144
data updated at time2018-09-16 15:00:39.711183
  File "/root/btc/crawler/updatekline.py", line 30
    def getkline_from_bitmex((pair,timeframe,exchangename,start,end=None):
                             ^
SyntaxError: invalid syntax
